# Sandbox

./: README.md
C/: README.md
C/DOUBLE_LINKED_LIST/: doubleLinkedList.c
C/POLYGON/: main.c  point.c  point.h
C/POLYGON_NEW/: geometry.c  main.c  point.c  point.h  vector.c  vector.h
C/SINGLE_LINKED_LIST/: singleLinkedList.c
COPILOT_TIPS/002_LATEX_MIKTEX_TIPS/: links.txt
COPILOT_TIPS/006_LATEX_MIKTEX_CLASSES_PACKAGES_TIPS/: links_A001.txt
COPILOT_TIPS/010_ROTATIONS/001/: Q003.txt  q001.txt
COPILOT_TIPS/010_ROTATIONS/002/: Q007.txt
C_CPP/: README.md
C_CPP/C/DOUBLE_LINKED_LIST/: doubleLinkedList.c
C_CPP/C/POLYGON/: polygon.c  polygon.h
C_CPP/C/POLYGON_NEW/: geometry.h  point.h  vector.c
C_CPP/POLYGON_NEW/: point.c  vector.h
C_CPP/SINGLE_LINKED_LIST/: singleLinkedList.c
Python/Blender/: Effectors.xlsx  ExcelParser.py  README.md  __init__.py  custom_Addon.py
Python/Blender/OPERATORS/: AddPlatform.py  DeletePlatform.py  __init__.py
Python/Blender/PANELS/: Platform.py  __init__.py
Python/Blender/PROPERTY_GROUP/: Datafile.py  PlatformPanelProps.py  __init__.py
Python/ELLIPSOID_FRUSTUM/: 20240508_SPIE.pptx  canted_ellipse.ipe
Python/ExcelParser/: 03_Excel_Parser.py  Excel_Parser.py  README.md
Python/HEL/: CLParser.py  __init__.py  main.py
Python/KML_PARSING/: Drone_Flight_Path.kml  Drone_Flight_Path_LITCHI.kml  README.md  kml_parser.py
Python/PACKAGING_TUTORIAL/: README.md  pyproject.toml
Python/PMM/: Body.py  Projectile.py  Simulator.py  Target.py  Utils.py  World.py
Python/PN/: PN_ZARCHAN.py  Solve_Numeric.py
(+44 files in other folders)
